# ItsUtils

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
its_utils/: string_math.py  word_math.py
src/ItsUtils/: string_math.py
tests/: test_string_math.py  test_word_math.py  utils.py
